# pybeach

./: .coverage  .coverage.CPSC-W-MDS05.40210.286416  .coverage.CPSC-W-MDS05.55846.309433  .gitignore  .travis.yml  LICENSE.md  README.md  example.ipynb  paper.bib  paper.md  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: build.yml
docs/: background.rst  conf.py  help.rst  index.rst  requirements.txt  usage.rst
docs/_build/doctrees/: background.doctree  environment.pickle  help.doctree  index.doctree  installation.doctree  usage.doctree
docs/_build/html/: .buildinfo  background.html  genindex.html  help.html  index.html  installation.html  objects.inv  search.html  searchindex.js  usage.html
docs/_build/html/_sources/: background.rst.txt  index.rst.txt  installation.rst.txt  usage.rst.txt
docs/img/figure-data/: figure_1_notebook.ipynb  figure_2_notebook.ipynb  figure_3_table_1_notebook.ipynb  scratch.ipynb
example/: example.ipynb  test_profiles.pkl
mauscript/: paper.bib  paper.md
pybeach/: beach.py
pybeach/classifiers/: barrier_island_clf.joblib  mixed_clf.joblib  wave_embayed_clf.joblib
pybeach/support/: classifier_support.py  data_support.py
pydune/: beach.py  pydune.py
pydune/classifiers/: SR04_clf.joblib  SR04_train_clf.joblib  barrier_island_clf.joblib  barrier_island_train_clf.joblib  create_classifier.py  mixed_clf.joblib  wave_embayed_clf.joblib  wave_embayed_train_clf.joblib
pydune/support/: classifier_support.py  data_support.py
tests/: test_pybeach.py  test_pydune.py
