[tool.poetry]
name = "pydune"
version = "0.1.23"
description = "A Python package for locating the dune toe on cross-shore beach profile transects."
authors = ["Tomas Beuzen <tomas.beuzen@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/TomasBeuzen/pydune"
repository = "https://github.com/TomasBeuzen/pydune"
documentation = 'https://pydune-tomasbeuzen.readthedocs.io'
keywords = ["coastal", "dune", "dune toe", "machine learning"]

[tool.poetry.dependencies]
python = "3.7"
numpy = "1.17.1"
scipy = "1.3.1"
pandas = "0.25.3"
scikit-learn = "0.21.2"
joblib = "0.13.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-cov = "^2.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
