[tool.poetry]
name = "pybeach"
version = "0.1.2"
description = "A Python package for locating the dune toe on cross-shore beach profile transects."
authors = ["Tomas Beuzen <tomas.beuzen@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/TomasBeuzen/pybeach"
repository = "https://github.com/TomasBeuzen/pybeach"
documentation = 'https://pybeach.readthedocs.io'
keywords = ["coastal", "dune", "dune toe", "beach", "machine learning"]

[tool.poetry.dependencies]
python = "^3.6"
numpy = "1.17.2"
scipy = "1.3.1"
pandas = "0.25.1"
scikit-learn = "0.21.2"
joblib = "0.13.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-cov = "^2.7"
sphinx = "^2.4.3"
flake8 = "^3.8.3"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
