[tool.poetry]
name = "pybeach"
version = "0.1.3"
description = "A Python package for locating the dune toe on cross-shore beach profile transects."
authors = ["Tomas Beuzen"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
scikit-learn = "^1.0"
joblib = "^1.0.1"
pandas = "^1.3.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pytest-cov = "^2.12.1"
Sphinx = "^4.1.0"
flake8 = "^3.9.2"
black = "^21.6b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
